--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <h1>Main Page</h1>=
+    <h1>Main Page</h1>
+    <p>This is an important message</p>
     </head>
 </html>
